                    - The method '_register_bricks' now takes Brick classes.
                - The view 'views.portal.Portal' injects "bricks" (in the context) instead "app_bricks".
            * Billing :
                - In JavaScript, the actions "billing-hatmenubar-invoice-number" & "billing-hatmenubar-add-document" have been removed.
            * Mobile :
                - The templatetag "mobile_activity_card" does not inject "STATUS_IN_PROGRESS" in the context anymore.
            * Projects :
                - In JavaScript, the action "projects-hatmenubar-close" has been removed.


== Version 2.5 ==

  UPGRADE NOTE :
    - You should create a all new virtual environment based on Python 3.8+ .

  Users side :
  ------------
    # The version of Django has been upgraded to "4.2".
    # A visitor mode has been added; from any list-view, you can visit all the related detail-views the one after the other.
      (button "Enter the exploration mode" in list-views).
    # The link in the list-views selectors are now opened in other tabs automatically.
    # In forms :
        - The custom fields with ENUM/MULTI_ENUM type are now using the Select2 combobox with lazy loading & search.
        - In the form for entity-filters :
            - The regular fields corresponding to foreign keys ('Sector', 'Status', ...) are now using the Select2 combobox with lazy loading & search.
            - The regular fields with static choices (like 'Discount' in billing lines) are now using combobox instead of a text input.
    # Apps :
        * Creme_config :
            - Each CustomForm can now be reset (to set the fields it would have have after a fresh installation).
            - In the Users' configuration page :
                - The displayed name of Users can now be customised (per user);
                  each used can change its own displayed name by default (& you can disable this feature).