@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2013-2023  Hybird
+#    Copyright (C) 2013-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -34,7 +34,6 @@ from creme.reports.constants import AbscissaGroup
 from creme.reports.utils import sparsezip
 
 from .aggregator import AGGREGATORS_MAP, ReportGraphAggregator
-from .lv_url import ListViewURLBuilder
 
 if TYPE_CHECKING:
     from creme.reports.models import AbstractReportGraph
@@ -101,6 +100,8 @@ class ReportGraphHand:
         self.ordinate_error: str | None = y_calculator.error
 
     def _listview_url_builder(self, extra_q: Q | None = None):
+        from .lv_url import ListViewURLBuilder
+
         graph = self._graph
         return ListViewURLBuilder(
             model=graph.model,
